<resources>
    <string name="app_name">NanoHUB</string>
    <string name="action_settings">Settings</string>
    <string name="button_popular_movies">Popular Movies</string>
    <string name="button_stock_hawk">Stock Hawk</string>
    <string name="button_build_it">Build It Bigger</string>
    <string name="button_make_material">Make Your App Material</string>
    <string name="button_go_ubiquitous">Go Ubiquitous</string>
    <string name="button_capstone">Capstone</string>
</resources>
