<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.karanrajpal.nanohub.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/popular_movies_button"
        style="@style/ButtonStyle"
        android:onClick="showToast"
        android:text="@string/button_popular_movies" />

    <Button
        android:id="@+id/stock_hawk_button"
        style="@style/ButtonStyle"
        android:onClick="showToast"
        android:text="@string/button_stock_hawk" />

    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/ButtonStyle"
        android:onClick="showToast"
        android:text="@string/button_build_it" />

    <Button
        android:id="@+id/make_your_app_material_button"
        style="@style/ButtonStyle"
        android:onClick="showToast"
        android:text="@string/button_make_material" />

    <Button
        android:id="@+id/go_ubiquitous_button"
        style="@style/ButtonStyle"
        android:onClick="showToast"
        android:text="@string/button_go_ubiquitous" />

    <Button
        android:id="@+id/capstone_button"
        style="@style/ButtonStyle"
        android:onClick="showToast"
        android:text="@string/button_capstone" />

</LinearLayout>
